# sound-of-silence

./: .gitignore  README.md  RESULTS.md  pyproject.toml
dach_momentum/: pyproject.toml  requirements.txt  run_backtest.py  run_backtest_v2.py  run_canslim.py  run_dashboard.py  run_enhanced.py  run_exits.py  run_funding_sweep.py  run_knockout_backtest.py  run_mae.py  run_overlay_sanity.py  run_top_gains.py  run_v3_alpha.py  run_walkforward.py  run_walkforward_funding.py  webinar_irankrieg_2026.html
dach_momentum/dach_momentum/: __init__.py  __main__.py  btc_data.py  canslim.py  config.py  dashboard.py  data.py  external_data.py  knockout_signals.py  patterns.py  positions.py  signals.py  universe.py
dach_momentum/data/: backtest_equity.csv  backtest_equity_canslim.csv  backtest_equity_cash_machine.csv  backtest_equity_momentum.csv  backtest_equity_rich_quick.csv  backtest_equity_super_rich.csv  backtest_trades.csv  backtest_trades_canslim.csv  backtest_trades_cash_machine.csv  backtest_trades_momentum.csv  backtest_trades_rich_quick.csv  backtest_trades_super_rich.csv  btc_daily.csv  btc_funding.csv  data_quality.csv  funding_sweep.csv  funding_sweep_super_rich.csv  funding_walkforward_rich_quick.csv  funding_walkforward_super_rich.csv  seed_universe.csv  universe.csv  universe_filtered.csv
dach_momentum/data/cache/: metadata_cache.csv
dach_momentum/data/prices/: 1COV_DE.parquet  1U1_DE.parquet  3IN_L.parquet  8TRA_DE.parquet  A2A_MI.parquet  A3M_MC.parquet  AAS_L.parquet  (+751 more)
dach_momentum/tests/: test_backtest.py  test_positions.py  test_signals.py  test_universe.py
(+66 files in other folders)
