[project]
name = "dach-momentum"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "requests>=2.31",
    "lxml>=4.9",
    "html5lib>=1.1",
    "yfinance>=0.2.40",
    "beautifulsoup4>=4.12",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "mypy",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
